takamaka_examples/src/takamaka/tests/errors/inconsistentthrowsexceptions1/Sub.java
package takamaka.tests.errors.inconsistentthrowsexceptions1;

public class Sub extends Super {
	public void m() {}
}